BB-5556 Wirecard integration: - CheckoutBundle\..\workflows.yml: Added checkoutId to transactionOptions to use it on purchase action to find active initiate transaction - InitiateTransaction is bound to checkout object and not reused anymore - Fixed multiple phpdoc blocks - Test mode is not inserted anymore as a transaction option,  config field is used where needed - Moved request stack access from gateway to paymentmethod - Fixed several form fields: names, missing translations, wrong types - ShopId config parameter  is not required anymore - Implemented mapping logic from oro language codes to wirecard language codes - Replaced deprecated PaymentMethodProviderRegistry use with composite_provider - Added missing validation.yml - Fixed JS requests duplications - Added orderDescription

--- a/Resources/config/method.yml
+++ b/Resources/config/method.yml
@@ -82,6 +82,8 @@ services:
             - '@oro_wirecard.provider.payment_transaction'
             - '@oro_wirecard.seamless.gateway'
             - '@router'
+            - '@oro_entity.doctrine_helper'
+            - '@request_stack'
 
     oro_wirecard.method.factory.wirecard_seamless.credit_card:
         class: 'Oro\Bundle\WirecardBundle\Method\Factory\WirecardSeamlessCreditCardPaymentMethodFactory'
@@ -167,6 +169,3 @@ services:
             - '@oro_wirecard.method.config.provider.wirecard_seamless.sepa_direct_debit'
         tags:
             - { name: oro_payment.payment_method_view_provider }
-
-
-
