--- a/Resources/views/layouts/default/imports/oro_payment_method_options/layout.yml
+++ b/Resources/views/layouts/default/imports/oro_payment_method_options/layout.yml
@@ -3,3 +3,6 @@ layout:
         - '@setBlockTheme':
             themes:
                 - 'layout.html.twig'
+        - '@setFormTheme':
+            themes:
+                - 'form.html.twig'
