BB-9479: Pass correct shipping address to Wirecard PayPal (#10341)
BB-9479: Pass correct shipping address to Wirecard PayPal
 - shipping address passed to wirecard

--- a/Resources/config/method.yml
+++ b/Resources/config/method.yml
@@ -87,6 +87,7 @@ services:
             - '@router'
             - '@oro_entity.doctrine_helper'
             - '@request_stack'
+            - '@oro_payment.provider.extract_options'
 
     oro_wirecard.method.factory.wirecard_seamless.credit_card:
         class: 'Oro\Bundle\WirecardBundle\Method\Factory\WirecardSeamlessCreditCardPaymentMethodFactory'
