--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,13 @@
     },
     "require": {
         "php": ">=7.0",
-        "oro/commerce": "1.x-dev",
+        "oro/commerce": "1.3.*",
         "guzzlehttp/guzzle": "^6.0.0",
         "hochstrasserio/wirecard": "^1.0"
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.x-dev"
+            "dev-master": "1.3.x-dev"
         }
     }
 }
