--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,18 @@
         "guzzlehttp/guzzle": "^6.0.0",
         "hochstrasserio/wirecard": "^1.0"
     },
+    "repositories": {
+        "oro": {
+            "type": "composer",
+            "url": "https://packagist.orocrm.com"
+        },
+        "asset-packagist": {
+            "type": "composer",
+            "url": "https://asset-packagist.orocrm.com"
+        }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "extra": {
         "branch-alias": {
             "dev-master": "1.3.x-dev"
