--- a/Tests/Behat/behat.yml
+++ b/Tests/Behat/behat.yml
@@ -47,7 +47,7 @@ oro_behat_extension:
         - OroFormBundle::FeatureContext
         - OroFormBundle::FormContext
         - OroConfigBundle::FeatureContext
-        - OroAuthorizeNetBundle::FeatureContext
+        - OroProductBundle::FeatureContext
         - OroWirecardBundle::FeatureContext
         - OroCheckoutBundle::FeatureContext
         - OroShoppingListBundle::ShoppingListContext
