OPI-145: Fixed behat tests for public repository (#12891)

--- a/Tests/Behat/behat.yml
+++ b/Tests/Behat/behat.yml
@@ -43,7 +43,7 @@ oro_behat_extension:
         - OroFormBundle::FeatureContext
         - OroFormBundle::FormContext
         - OroConfigBundle::FeatureContext
-        - OroAuthorizeNetBundle::FeatureContext
+        - OroProductBundle::FeatureContext
         - OroWirecardBundle::FeatureContext
         - OroCheckoutBundle::FeatureContext
         - OroShoppingListBundle::ShoppingListContext
