OPI-132: Added check for missed RequireJS config (#15014)
 - fix found missing configs

--- a/Resources/views/layouts/blank/config/requirejs.yml
+++ b/Resources/views/layouts/blank/config/requirejs.yml
@@ -6,3 +6,7 @@ config:
         'orowirecard/js/app/components/wirecard-seamless-component': 'bundles/orowirecard/js/app/components/wirecard-seamless-component.js'
         'orowirecard/js/validator/sepa-iban': 'bundles/orowirecard/js/validator/sepa-iban.js'
         'orowirecard/js/validator/sepa-bic': 'bundles/orowirecard/js/validator/sepa-bic.js'
+
+build:
+    paths:
+        'orowirecard/js/stubs/wirecard-data-storage-mock': 'empty:'
