--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "require": {
         "php": "7.1.*",
-        "oro/commerce": "1.x-dev",
+        "oro/commerce": "3.0.*",
         "guzzlehttp/guzzle": "^6.0.0",
         "hochstrasserio/wirecard": "^1.0"
     },
@@ -33,7 +33,7 @@
     "prefer-stable": true,
     "extra": {
         "branch-alias": {
-            "dev-master": "1.x-dev"
+            "dev-3.0-rc": "3.0.x-dev"
         }
     }
 }
