--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "require": {
         "php": "7.1.*",
-        "oro/commerce": "3.0.*",
+        "oro/commerce": "3.0.x-dev",
         "guzzlehttp/guzzle": "^6.0.0",
         "hochstrasserio/wirecard": "^1.0"
     },
