BB-15450: Review and fix currencies processing for ProductPriceProvider (#20548)
- Code refactoring ProductPriceProvider
- Added functionality to forbid possibility to call methods y getting prices with no currencies
- Fixed issue with incorrect argument while calling product price provider
- Fixed issue with missed currency list in behat fixture
- Fixed issue with combined price list has outdated currencies list
- Added functional test to cover new PriceListCurrencyHandler
- Updated unit test PriceListListenerTest to cover changes in currencies list
- Fixed currency processing in AjaxProductPriceController
- Fixed tests that cover functionality in AjaxProductPriceController
- CR fixes: removed currency handler moved currency actualization to queue

--- a/Tests/Behat/Features/Fixtures/WireCardPaymentFixture.yml
+++ b/Tests/Behat/Features/Fixtures/WireCardPaymentFixture.yml
@@ -74,11 +74,13 @@ Oro\Bundle\ProductBundle\Entity\Product:
 Oro\Bundle\ShoppingListBundle\Entity\ShoppingList:
     shoppinglist:
         label: 'List 1'
+        customer: '@customer'
         customerUser: '@amanda'
         organization: '@organization'
         website: '@website1'
     shoppinglist2:
         label: 'List 2'
+        customer: '@customer'
         customerUser: '@amanda'
         organization: '@organization'
         website: '@website1'
@@ -156,6 +158,11 @@ Oro\Bundle\PricingBundle\Entity\CombinedPriceList:
     combinedPriceList:
         name: 'combinedPriceList'
         enabled: true
+
+Oro\Bundle\PricingBundle\Entity\CombinedPriceListCurrency:
+    combinedPriceListCurrency:
+        pricelist: '@combinedPriceList'
+        currency: 'EUR'
 
 Oro\Bundle\PricingBundle\Entity\CombinedProductPrice:
    combinedProductPrice:
