BB-13932: FrontStore > Single page checkout > PAYMENT - errors if use PayPal methods (#20693)
- added extra checkout transition to do purchase activities
- removed unused shipping_context, unneeded actions and conditions
- updated TransitWorkflow action (added `ifAllowed` parameter and logic)
- added behat step for paypal integration creation
- added behat step for payment rule creation
- added behat step for single page checkout activation
- updated behats features and unit tests

--- a/Tests/Behat/behat.yml
+++ b/Tests/Behat/behat.yml
@@ -52,5 +52,6 @@ oro_behat_extension:
         - OroCheckoutBundle::FeatureContext
         - OroShoppingListBundle::ShoppingListContext
         - OroDataGridBundle::GridContext
+        - OroWorkflowBundle::FeatureContext
       paths:
         - '@OroWirecardBundle/Tests/Behat/Features'
