--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "exclude-from-classmap": ["/Tests/"]
     },
     "require": {
-        "oro/commerce": "3.1.*",
+        "oro/commerce": "3.2.x-dev",
         "guzzlehttp/guzzle": "^6.0.0",
         "hochstrasserio/wirecard": "^1.0"
     },
