BB-16314: Integrations, payment and shipping rules per organization (#22684)
- get rules by an organization
- fixtures for methods configs rules have been updated

--- a/Tests/Behat/Features/Fixtures/WireCardPaymentFixture.yml
+++ b/Tests/Behat/Features/Fixtures/WireCardPaymentFixture.yml
@@ -23,6 +23,7 @@ Oro\Bundle\ShippingBundle\Entity\ShippingMethodsConfigsRule:
         rule: '@shippingRule'
         methodConfigs: ['@shippingMethodConfig']
         currency: 'EUR'
+        organization: '@organization'
 
 Oro\Bundle\CurrencyBundle\Entity\Price(local):
     price:
