BB-14089: Line items provider should not apply logic which is details of payment method business logic to result (#21985)
 - remove event listeners with events to get line items and shipping address options
 - use tax line items only for PayPal bundle
 - add own option provider interface for each payment system: PayPal, Wirecard
 - pass line items, surcharges to complete/DO_EC transaction to have this date on buyer's and seller's paypal detail pages
 - fix bug when tax line item was adding in case of "price includes tax" option enabled
 - don't pass tax information to Apruve in case of it's impossible to get(calculate) it
 - handle taxation disabled in case of payment error

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -29,3 +29,9 @@ services:
             - '@oro_wirecard.method.config.provider.wirecard_seamless.sepa_direct_debit'
         tags:
             - { name: validator.constraint_validator }
+
+    oro_wirecard.options_provider.options:
+        class: 'Oro\Bundle\WirecardBundle\OptionsProvider\OptionsProvider'
+        public: false
+        arguments:
+            - '@oro_payment.provider.payment_order_shipping_address_options'
