BAP-19043: Remove direct service retrieval - mark services as public (#24415)
- marked as public services which are requested from the container directly
- marked as public services which used in "@call_service_method" actions

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -13,7 +13,8 @@ services:
     oro_wirecard.provider.payment_transaction:
         class: 'Oro\Bundle\WirecardBundle\Provider\PaymentTransactionProvider'
         parent: oro_payment.provider.payment_transaction
-        public: false
+        # This service marked as public (origin private) for compatibility with Symfony 4. All dependencies must be refactored after BAP-17037
+        public: true
 
     oro_wirecard.request.payment_method_param_converter:
         class: 'Oro\Bundle\WirecardBundle\Request\PaymentMethodParamConverter'
