--- a/Tests/Behat/Features/Fixtures/WireCardPaymentFixture.yml
+++ b/Tests/Behat/Features/Fixtures/WireCardPaymentFixture.yml
@@ -15,7 +15,7 @@ Oro\Bundle\ShippingBundle\Entity\ShippingMethodTypeConfig:
 
 Oro\Bundle\ShippingBundle\Entity\ShippingMethodConfig:
     shippingMethodConfig:
-        method: '<("flat_rate_".@flatRateIntegration->id)>'
+        method: '<("flat_rate_".@flatRateIntegration->getId())>'
         typeConfigs: ['@shippingMethodTypeConfig']
 
 Oro\Bundle\ShippingBundle\Entity\ShippingMethodsConfigsRule:
@@ -25,7 +25,7 @@ Oro\Bundle\ShippingBundle\Entity\ShippingMethodsConfigsRule:
         currency: 'EUR'
         organization: '@organization'
 
-Oro\Bundle\CurrencyBundle\Entity\Price(local):
+Oro\Bundle\CurrencyBundle\Entity\Price:
     price:
         value: '10'
         currency: 'EUR'
@@ -48,7 +48,7 @@ Oro\Bundle\CustomerBundle\Entity\CustomerUser:
         confirmed: '1'
         customer: '@customer'
         organization: '@organization'
-        role: ['@buyer']
+        roles: ['@buyer']
         owner: '@admin'
         website: '@website1'
 
@@ -65,7 +65,8 @@ Oro\Bundle\ProductBundle\Entity\Product:
     product:
         sku: 'SKU123'
         primaryUnitPrecision: '@precision'
-        addName: ['@locValue']
+        __calls:
+            - addName: ['@locValue']
         inventoryStatus: '@enumInventoryStatuses'
         status: 'enabled'
         owner: '@business_unit'
@@ -126,7 +127,8 @@ Oro\Bundle\CustomerBundle\Entity\CustomerUserAddress:
         postalCode: '10115'
         frontendOwner: '@amanda'
         owner: '@admin'
-        setDefaults: ['@shippingType', '@billingType']
+        __calls:
+            - setDefaults: ['@shippingType', '@billingType']
         systemOrganization: '@organization'
         primary: true
         organization: '@organization'
@@ -135,7 +137,8 @@ Oro\Bundle\PricingBundle\Entity\PriceList:
     pricelistShipping:
         name: 'pricelist_shipping'
         default: true
-        setCurrencies: [['EUR']]
+        __calls:
+            - setCurrencies: [['EUR']]
         active: true
 
 Oro\Bundle\PricingBundle\Entity\PriceListToCustomer:
