--- a/Tests/Behat/behat.yml
+++ b/Tests/Behat/behat.yml
@@ -51,6 +51,7 @@ oro_behat_extension:
         - OroWirecardBundle::FeatureContext
         - OroCheckoutBundle::FeatureContext
         - OroShoppingListBundle::ShoppingListContext
+        - OroShoppingListBundle::FeatureContext
         - OroDataGridBundle::GridContext
         - OroWorkflowBundle::FeatureContext
       paths:
