BB-19470: Investigation: JS loading optimization on the Storefront (#28222)
 - `oroproduct/js/widget/zoom-widget` loaded as dynamic dependency
 - refactored `loadModules` library
 - removed requirejs/app-modules
 - added dynamic module for polyfills
 - jquery-ui is split on separate modules, only used modules are loaded
 - added analyzer option
 - grid-views-builder initializes only if it needed
 - datafilter-builder moved to orodatagrid chunk
 - device-emulate-module initializes switcher from dynamic module
 - overlayscrollbars library is moved into separate chunk
 - all validators are moved into dedicated chunk
 - jsmodules from dynamic-imports are rearranged by chunks

--- a/Resources/views/layouts/blank/config/jsmodules.yml
+++ b/Resources/views/layouts/blank/config/jsmodules.yml
@@ -1,8 +1,9 @@
 dynamic-imports:
-    orowirecard:
+    oropayment:
         - orowirecard/js/app/components/input-wirecard-seamless
         - orowirecard/js/app/components/input-wirecard-seamless-credit-card
         - orowirecard/js/app/components/input-wirecard-seamless-sepa-direct-debit
         - orowirecard/js/app/components/wirecard-seamless-component
+    oroform-validate:
         - orowirecard/js/validator/sepa-bic
         - orowirecard/js/validator/sepa-iban
